# recipes-api

./: CONTRIBUTING.md  README.md  agent.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
app/: admin.py  models.py  serializers.py  urls.py  views.py
app/migrations/: 0001_initial.py
app/tests/: test_views.py
recipes/: asgi.py  settings.py  urls.py  wsgi.py
